#ifndef CLOUDEVENTCPPSDK_V1_EVENTFORMAT_FORMAT_H_
#define CLOUDEVENTCPPSDK_V1_EVENTFORMAT_FORMAT_H_

namespace cloudevents {
namespace format {

/*
 * This enum class is used in this SDK to represent
 * an Event Format as defined by the spec.
 */
enum class Format {kJson};

} // format
} // cloudevents

#endif //CLOUDEVENTCPPSDK_V1_EVENTFORMAT_FORMAT_H_
